--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -13,9 +13,9 @@
         "strict": true
     },
     "files": [
+        "bastion.ts",
         "index.ts",
         "provider.ts",
-        "staticPage.ts",
         "utilities.ts"
     ]
 }
