--- a/sdk/dotnet/Lbrlabs.PulumiPackage.AwsTailscale.csproj
+++ b/sdk/dotnet/Lbrlabs.PulumiPackage.AwsTailscale.csproj
@@ -4,10 +4,10 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Pulumi Corp.</Authors>
     <Company>Pulumi Corp.</Company>
-    <Description></Description>
+    <Description>A Pulumi package for creating a tailscale bastion in AWS.</Description>
     <PackageLicenseExpression></PackageLicenseExpression>
     <PackageProjectUrl></PackageProjectUrl>
-    <RepositoryUrl></RepositoryUrl>
+    <RepositoryUrl>https://github.com/lbrlabs/pulumi-aws-tailscalebastion</RepositoryUrl>
     <PackageIcon>logo.png</PackageIcon>
 
     <TargetFramework>netcoreapp3.1</TargetFramework>
