--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -1,6 +1,7 @@
 {
-    "name": "@pulumi/aws-tailscale",
+    "name": "@lbrlabs/pulumi-aws-tailscalebastion",
     "version": "${VERSION}",
+    "repository": "https://github.com/lbrlabs/pulumi-aws-tailscalebastion",
     "scripts": {
         "build": "tsc",
         "install": "node scripts/install-pulumi-plugin.js resource aws-tailscale ${VERSION}"
@@ -17,6 +18,7 @@
     },
     "pulumi": {
         "resource": true,
-        "name": "aws-tailscale"
+        "name": "aws-tailscale",
+        "server": "github://api.github.com/lbrlabs"
     }
 }
