--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -25,6 +25,6 @@ builds:
 changelog:
   skip: true
 release:
-  disable: false
+  prerelease: auto
 snapshot:
   name_template: '{{ .Tag }}-SNAPSHOT'
