--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -1,2 +1,17 @@
 name: yaml_aws_tailscalebastion
-runtime: dotnet
+runtime: yaml
+resources:
+  vpc:
+    type: awsx:ec2:Vpc
+    properties:
+      cidrBlock: "172.20.0.0/22"
+  bastion:
+    type: "aws-tailscale:index:Bastion"
+    properties:
+      vpcId: ${vpc.vpcId}
+      subnetIds: ${vpc.privateSubnetIds}
+      route: "172.20.0.0/22"
+      region: "us-west-2"
+      
+outputs:
+  url: ${vpc.vpcId}
