--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -15,6 +15,8 @@
     "files": [
         "aws/bastion.ts",
         "aws/index.ts",
+        "azure/bastion.ts",
+        "azure/index.ts",
         "index.ts",
         "provider.ts",
         "utilities.ts"
