--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "@pulumi/aws": "^5.0.0",
         "@pulumi/azure": "^5.0.0",
+        "@pulumi/kubernetes": "^4.0.0",
         "@pulumi/tailscale": "^0.11.0",
         "@pulumi/tls": "^4.0.0"
     },
