--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -182,8 +182,7 @@ jobs:
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v2
       with:
-        args: -p 3 -f .goreleaser.prerelease.yml --rm-dist --skip-validate --timeout
-          60m0s
+        args: -f .goreleaser.prerelease.yml --rm-dist
         version: latest
     strategy:
       fail-fast: true
