--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -183,7 +183,7 @@ jobs:
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v2
       with:
-        args: -f .goreleaser.prerelease.yml --rm-dist --skip-validate --timeout
+        args: -f .goreleaser.prerelease.yml --rm-dist
           60m0s
         version: latest
     strategy:
