--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -182,7 +182,7 @@ jobs:
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v2
       with:
-        args: -f .goreleaser.prerelease.yml --rm-dist
+        args: -f .goreleaser.prerelease.yml --rm-dist --skip-validate
         version: latest
     strategy:
       fail-fast: true
