--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -182,7 +182,7 @@ jobs:
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v2
       with:
-        args: release --rm-dist --timeout 60m0s
+        args: release --rm-dist --skip-validate
         version: latest
     strategy:
       fail-fast: true
