--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -183,7 +183,7 @@ jobs:
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v3
       with:
-        args: -f .goreleaser.prerelease.yml --rm-dist --skip-validate --timeout 150m0s
+        args: -p 2 -f .goreleaser.prerelease.yml --rm-dist --skip-validate --timeout 150m0s
         version: latest
     strategy:
       fail-fast: true
