--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -163,6 +163,7 @@ jobs:
     name: publish
     needs: test
     runs-on: ubuntu-latest
+    timeout-minutes: 360
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
