--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -162,6 +162,7 @@ jobs:
     name: publish
     needs: test
     runs-on: ubuntu-latest
+    timeout-minutes: 360
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
