--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,7 +18,7 @@ jobs:
   comment-on-pr:
     if: github.event.pull_request.head.repo.full_name != github.repository
     name: comment-on-pr
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04t
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
