--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
   build_sdk:
     name: build_sdk
     needs: prerequisites
-    runs-on: nscloudt
+    runs-on: ubuntu-latestt
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
@@ -96,7 +96,7 @@ jobs:
         - "3.7"
   prerequisites:
     name: prerequisites
-    runs-on: nscloudt
+    runs-on: ubuntu-latestt
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
@@ -161,7 +161,7 @@ jobs:
   publish:
     name: publish
     needs: test
-    runs-on: nscloudt
+    runs-on: ubuntu-latestt
     timeout-minutes: 360
     steps:
     - name: Checkout Repo
@@ -199,7 +199,7 @@ jobs:
   publish_sdk:
     name: publish_sdk
     needs: publish
-    runs-on: nscloudt
+    runs-on: ubuntu-latestt
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
@@ -274,7 +274,7 @@ jobs:
   test:
     name: test
     needs: build_sdk
-    runs-on: nscloudt
+    runs-on: ubuntu-latestt
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
