--- a/.github/workflows/run-acceptance-tests.yml
+++ b/.github/workflows/run-acceptance-tests.yml
@@ -20,7 +20,7 @@ jobs:
       == github.repository
     name: build_sdk
     needs: prerequisites
-    runs-on: ubuntu-latestt
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
@@ -101,7 +101,7 @@ jobs:
   comment-notification:
     if: github.event_name == 'repository_dispatch'
     name: comment-notification
-    runs-on: ubuntu-latestt
+    runs-on: ubuntu-latest
     steps:
     - id: var
       name: Create URL to the run output
@@ -120,7 +120,7 @@ jobs:
     if: github.event_name == 'repository_dispatch' || github.event.pull_request.head.repo.full_name
       == github.repository
     name: prerequisites
-    runs-on: ubuntu-latestt
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
@@ -189,7 +189,7 @@ jobs:
       == github.repository
     name: test
     needs: build_sdk
-    runs-on: ubuntu-latestt
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
