--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -183,7 +183,7 @@ jobs:
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v3
       with:
-        args: release -p 1 --rm-dist --skip-validate --timeout 150m0s
+        args: -p 1 --rm-dist --skip-validate --timeout 150m0s
         version: latest
     strategy:
       fail-fast: true
