use dependency caching for go.mod

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
@@ -109,9 +112,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
@@ -169,9 +175,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
@@ -212,9 +221,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
@@ -287,9 +299,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
