--- a/.github/workflows/run-acceptance-tests.yml
+++ b/.github/workflows/run-acceptance-tests.yml
@@ -35,9 +35,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
@@ -135,9 +138,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
@@ -204,9 +210,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
