--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -31,9 +31,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
@@ -109,9 +112,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
@@ -170,9 +176,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
@@ -213,9 +222,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
@@ -288,9 +300,12 @@ jobs:
     - name: Unshallow clone for tags
       run: git fetch --prune --unshallow --tags
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: ${{matrix.goversion}}
+        cache-dependency-path: |
+          examples/go.sum
+          provider/go.sum
     - name: Install pulumictl
       uses: jaxxstorm/action-install-gh-release@v1.7.1
       with:
