--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -22,6 +22,8 @@
     },
     "devDependencies": {
         "@types/node": "^14",
+        "glob": "^7.1.2",
+        "minimatch": "^3.1.2",
         "typescript": "^3.7.0"
     },
     "pulumi": {
