--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -193,7 +193,7 @@ jobs:
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v3
       with:
-        args: -p 1 -f .goreleaser.prerelease.yml --rm-dist --skip-validate --timeout 150m0s
+        args: -p 2 release --clean --skip=validate -p 2 --timeout 360m0s
         version: latest
     strategy:
       fail-fast: true
