--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -192,7 +192,7 @@ jobs:
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v3
       with:
-        args: -p 1 --rm-dist --skip-validate --timeout 150m0s
+        args: -p 2 release --clean --skip=validate -p 2 --timeout 360m0s
         version: latest
     strategy:
       fail-fast: true
