--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -20,10 +20,11 @@
         "@pulumi/kubernetes": "^4.0.0",
         "@pulumi/pulumi": "^3.142.0",
         "@pulumi/tailscale": "^0.18.0",
-        "@pulumi/tls": "^5.0.0"
+        "@pulumi/tls": "^5.0.0",
+        "@types/node": "^18",
+        "typescript": "^4.3.5"
     },
     "devDependencies": {
-        "@types/node": "^14",
         "glob": "^9.0.0",
         "minimatch": "^5.0.0",
         "typescript": "^3.7.0"
