add support for peer relays
Signed-off-by: Lee Briggs <lee@leebriggs.co.uk>

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -21,6 +21,9 @@
         "kubernetes/bastion.ts",
         "kubernetes/index.ts",
         "provider.ts",
+        "types/index.ts",
+        "types/input.ts",
+        "types/output.ts",
         "utilities.ts"
     ]
 }
